--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-wechat-offiaccount",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "wechat offiaccount node",
   "keywords": [
     "n8n-community-node-package",
@@ -40,7 +40,9 @@
       "dist/credentials/WechatOfficialAccountCredentialsApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/WechatOfficialAccountNode/WechatOfficialAccountNode.node.js"
+      "dist/nodes/WechatOfficialAccountNode/WechatOfficialAccountNode.node.js",
+      "dist/nodes/WechatOfficialAccountTrigger/WechatOfficialAccountTrigger.node.js",
+      "dist/nodes/WechatOfficialAccountResponseNode/WechatOfficialAccountResponseNode.node.js"
     ]
   },
   "devDependencies": {
@@ -48,16 +50,18 @@
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.56.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
+    "express": "^4.21.2",
+    "form-data": "^4.0.1",
+    "glob": "^10.4.5",
     "gulp": "^4.0.2",
     "prettier": "^3.3.2",
     "require-glob": "^4.1.0",
-    "typescript": "^5.5.3",
-    "form-data": "^4.0.1",
-    "glob": "^10.4.5"
+    "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
   },
   "dependencies": {
+    "xml-js": "^1.6.11"
   }
 }
