--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-wechat-offiaccount",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "wechat offiaccount node",
   "keywords": [
     "n8n-community-node-package",
@@ -59,7 +59,7 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "n8n-workflow": "*"
+    "n8n-workflow": "latest"
   },
   "dependencies": {
     "xml-js": "^1.6.11"
